@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 Netflix, Inc.
+ * Copyright 2022 Netflix, Inc.
  * <p>
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
  * the License. You may obtain a copy of the License at
@@ -12,31 +12,28 @@
  */
 package com.netflix.conductor.core.execution.mapper;
 
-import com.netflix.conductor.common.metadata.tasks.Task;
-import com.netflix.conductor.common.metadata.tasks.TaskDef;
-import com.netflix.conductor.common.metadata.tasks.TaskType;
-import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
-import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
-import com.netflix.conductor.common.run.Workflow;
-import com.netflix.conductor.core.exception.TerminateWorkflowException;
-import com.netflix.conductor.core.utils.ParametersUtils;
-import com.netflix.conductor.dao.MetadataDAO;
+import java.util.*;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
+import com.netflix.conductor.common.metadata.tasks.TaskDef;
+import com.netflix.conductor.common.metadata.tasks.TaskType;
+import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
+import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
+import com.netflix.conductor.core.exception.TerminateWorkflowException;
+import com.netflix.conductor.core.utils.ParametersUtils;
+import com.netflix.conductor.dao.MetadataDAO;
+import com.netflix.conductor.model.TaskModel;
+import com.netflix.conductor.model.WorkflowModel;
 
 /**
- * An implementation of {@link TaskMapper} to map a {@link WorkflowTask} of type {@link TaskType#HTTP} to a {@link Task}
- * of type {@link TaskType#HTTP} with {@link Task.Status#SCHEDULED}
+ * An implementation of {@link TaskMapper} to map a {@link WorkflowTask} of type {@link
+ * TaskType#HTTP} to a {@link TaskModel} of type {@link TaskType#HTTP} with {@link
+ * TaskModel.Status#SCHEDULED}
  */
-@SuppressWarnings("SpringJavaInjectionPointsAutowiringInspection")
 @Component
 public class HTTPTaskMapper implements TaskMapper {
 
@@ -57,55 +54,48 @@ public class HTTPTaskMapper implements TaskMapper {
     }
 
     /**
-     * This method maps a {@link WorkflowTask} of type {@link TaskType#HTTP} to a {@link Task} in a {@link
-     * Task.Status#SCHEDULED} state
+     * This method maps a {@link WorkflowTask} of type {@link TaskType#HTTP} to a {@link TaskModel}
+     * in a {@link TaskModel.Status#SCHEDULED} state
      *
-     * @param taskMapperContext: A wrapper class containing the {@link WorkflowTask}, {@link WorkflowDef}, {@link
-     *                           Workflow} and a string representation of the TaskId
+     * @param taskMapperContext: A wrapper class containing the {@link WorkflowTask}, {@link
+     *     WorkflowDef}, {@link WorkflowModel} and a string representation of the TaskId
      * @return a List with just one HTTP task
      * @throws TerminateWorkflowException In case if the task definition does not exist
      */
     @Override
-    public List<Task> getMappedTasks(TaskMapperContext taskMapperContext) throws TerminateWorkflowException {
+    public List<TaskModel> getMappedTasks(TaskMapperContext taskMapperContext)
+            throws TerminateWorkflowException {
 
         LOGGER.debug("TaskMapperContext {} in HTTPTaskMapper", taskMapperContext);
 
-        WorkflowTask taskToSchedule = taskMapperContext.getTaskToSchedule();
-        taskToSchedule.getInputParameters().put("asyncComplete", taskToSchedule.isAsyncComplete());
-        Workflow workflowInstance = taskMapperContext.getWorkflowInstance();
+        WorkflowTask workflowTask = taskMapperContext.getWorkflowTask();
+        workflowTask.getInputParameters().put("asyncComplete", workflowTask.isAsyncComplete());
+        WorkflowModel workflowModel = taskMapperContext.getWorkflowModel();
         String taskId = taskMapperContext.getTaskId();
         int retryCount = taskMapperContext.getRetryCount();
 
-        TaskDef taskDefinition = Optional.ofNullable(taskMapperContext.getTaskDefinition())
-            .orElseGet(() -> Optional.ofNullable(metadataDAO.getTaskDef(taskToSchedule.getName()))
-                .orElse(null));
+        TaskDef taskDefinition =
+                Optional.ofNullable(taskMapperContext.getTaskDefinition())
+                        .orElseGet(() -> metadataDAO.getTaskDef(workflowTask.getName()));
 
-        Map<String, Object> input = parametersUtils
-            .getTaskInputV2(taskToSchedule.getInputParameters(), workflowInstance, taskId, taskDefinition);
+        Map<String, Object> input =
+                parametersUtils.getTaskInputV2(
+                        workflowTask.getInputParameters(), workflowModel, taskId, taskDefinition);
         Boolean asynComplete = (Boolean) input.get("asyncComplete");
 
-        Task httpTask = new Task();
-        httpTask.setTaskType(taskToSchedule.getType());
-        httpTask.setTaskDefName(taskToSchedule.getName());
-        httpTask.setReferenceTaskName(taskToSchedule.getTaskReferenceName());
-        httpTask.setWorkflowInstanceId(workflowInstance.getWorkflowId());
-        httpTask.setWorkflowType(workflowInstance.getWorkflowName());
-        httpTask.setCorrelationId(workflowInstance.getCorrelationId());
-        httpTask.setScheduledTime(System.currentTimeMillis());
-        httpTask.setTaskId(taskId);
+        TaskModel httpTask = taskMapperContext.createTaskModel();
         httpTask.setInputData(input);
         httpTask.getInputData().put("asyncComplete", asynComplete);
-        httpTask.setStatus(Task.Status.SCHEDULED);
+        httpTask.setStatus(TaskModel.Status.SCHEDULED);
         httpTask.setRetryCount(retryCount);
-        httpTask.setCallbackAfterSeconds(taskToSchedule.getStartDelay());
-        httpTask.setWorkflowTask(taskToSchedule);
-        httpTask.setWorkflowPriority(workflowInstance.getPriority());
+        httpTask.setCallbackAfterSeconds(workflowTask.getStartDelay());
         if (Objects.nonNull(taskDefinition)) {
             httpTask.setRateLimitPerFrequency(taskDefinition.getRateLimitPerFrequency());
-            httpTask.setRateLimitFrequencyInSeconds(taskDefinition.getRateLimitFrequencyInSeconds());
+            httpTask.setRateLimitFrequencyInSeconds(
+                    taskDefinition.getRateLimitFrequencyInSeconds());
             httpTask.setIsolationGroupId(taskDefinition.getIsolationGroupId());
             httpTask.setExecutionNameSpace(taskDefinition.getExecutionNameSpace());
         }
-        return Collections.singletonList(httpTask);
+        return List.of(httpTask);
     }
 }
